src/app/components/above-the-fold/above-the-fold.component.scss
@import "../../../variables.scss";
section {
  display: flex;
  position: relative;
  min-height: calc(100svh - 64px);
  margin: 64px 0 0 0;
}

.img {
  position: absolute;
  bottom: 50%;
  left: 40%;
  transform: translate(-50%, 50%);
  @media (max-width: 500px) {
    width: 30vw;
    bottom: 65%;
    left: 50%;
    @media (max-height: 400px) {
      bottom: 70%;
    }
    @media (max-height: 340px) {
      bottom: 60%;
      left: 30%;
    }
  }
  @media (max-width: 1000px) and (min-width: 500px) {
    left: 50%;
    bottom: 55%;
    @media (min-height: 200px) and (max-height: 400px) {
      width: 20vw;
      bottom: 50%;
      left: 25%;
    }
    @media (min-height: 400px) and (max-height: 600px) {
      width: 30vw;
      bottom: 50%;
      left: 25%;
    }
    @media (min-height: 600px) {
      width: 30vw;
      bottom: 68%;
    }
    @media (min-height: 800px) {
      width: 40vw;
      bottom: 62%;
    }
    @media (min-height: 900px) {
      width: unset;
    }
    @media (min-height: 1000px) {
      width: 60vw;
    }
    @media (min-height: 1200px) {
      width: 80vw;
    }
  }
  @media (min-height: 300px) {
    @media (max-width: 350px) {
      width: 50vw;
    }
  }
  @media (min-height: 400px) {
    @media (max-width: 670px) {
      width: 50vw;
    }
    @media (max-width: 370px) {
      bottom: 65%;
    }
    @media (max-width: 315px) {
      bottom: 60%;
    }
  }
  @media (min-height: 700px) {
    @media (max-width: 670px) {
      width: 60vw;
    }
    @media (max-width: 370px) {
      bottom: 65%;
    }
    @media (max-width: 315px) {
      bottom: 60%;
    }
    // @media (max-width: 320px) {
    //     bottom: 55%;
    // }
  }
  @media (min-height: 800px) {
    @media (max-width: 770px) {
      bottom: 55%;
    }
    @media (max-width: 550px) {
      width: 50vw;
    }
    @media (max-width: 450px) {
      width: 60vw;
    }
    @media (max-width: 380px) {
      width: 70vw;
    }
    @media (max-width: 340px) {
      bottom: 52%;
    }
    @media (max-width: 280px) {
      bottom: 45%;
    }
  }
  @media (min-height: 900px) {
    @media (max-width: 600px) {
      bottom: 50%;
    }
    @media (max-width: 320px) {
      bottom: 45%;
    }
  }
  .blurLoad {
    background-position: center;
    background-size: cover;
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    display: flex;
    justify-content: end;
    .picture {
      opacity: 0;
      transition: opacity 125ms ease-in-out;
      width: 45%;
      @media (max-width: 1000px) {
        width: 100%;
      }
    }
    .loaded {
      opacity: 1 !important;
    }
  }
  .shadow {
    position: absolute;
    z-index: -1;
    left: -7%;
    top: -1%;
    width: 66%;
    @media (max-width: 1000px) {
      left: -11%;
      top: -4%;
      width: 140%;
    }
  }
}

.iAmContainer {
  display: flex;
  flex-direction: column;
  position: absolute;
  color: white;
  right: 33%;
  top: 50%;
  transform: translate(50%, -50%);
  align-items: center;
  z-index: 1;
  @media (max-width: 1000px) {
    right: 50%;
    top: unset;
    bottom: 0;
    @media (min-width: 500px) and (max-width: 1000px) {
      @media (min-height: 200px) and (max-height: 600px) {
        top: 50%;
        bottom: unset;
        right: 33%;
      }
    }
  }
  @media (max-width: 500px) {
    @media (max-height: 340px) {
      top: 50%;
      bottom: unset;
      right: 33%;
    }
  }
  @media (min-height: 340px) {
    @media (max-width: 500px) {
      bottom: -5%;
    }
    @media (max-width: 450px) {
      bottom: 0%;
    }
    @media (max-width: 375px) {
      bottom: 6%;
    }
    @media (max-width: 300px) {
      bottom: 10%;
    }
  }
  @media (min-height: 400px) {
    @media (max-width: 500px) {
      bottom: -2%;
    }
    @media (max-width: 450px) {
      bottom: 0%;
    }
    @media (max-width: 375px) {
      bottom: 8%;
    }
    @media (max-width: 300px) {
      bottom: 12%;
    }
  }
  @media (min-height: 450px) {
    @media (max-width: 500px) {
      bottom: 5%;
    }
    @media (max-width: 450px) {
      bottom: 7%;
    }
    @media (max-width: 375px) {
      bottom: 13%;
    }
    @media (max-width: 300px) {
      bottom: 17%;
    }
  }
  @media (min-height: 500px) {
    @media (max-width: 500px) {
      bottom: 8%;
    }
    @media (max-width: 450px) {
      bottom: 10%;
    }
    @media (max-width: 375px) {
      bottom: 14%;
    }
    @media (max-width: 300px) {
      bottom: 18%;
    }
  }
  @media (min-height: 600px) {
    @media (max-width: 1000px) {
      bottom: 0;
    }
    @media (max-width: 800px) {
      bottom: 6%;
    }
    @media (max-width: 600px) {
      bottom: 8%;
    }
    @media (max-width: 450px) {
      bottom: 13%;
    }
  }
  @media (min-height: 700px) {
    @media (max-width: 1000px) {
      bottom: 5%;
    }
    @media (max-width: 800px) {
      bottom: 10%;
    }
    @media (max-width: 600px) {
      bottom: 13%;
    }
    @media (max-width: 450px) {
      bottom: 20%;
    }
  }
  @media (min-height: 800px) {
    @media (max-width: 1000px) {
      bottom: -6%;
    }
    @media (max-width: 800px) {
      bottom: 2%;
    }
    @media (max-width: 600px) {
      bottom: 6%;
    }
    @media (max-width: 450px) {
      bottom: 12%;
    }
    @media (max-width: 320px) {
      bottom: 16%;
    }
  }
  @media (min-height: 900px) {
    @media (max-width: 800px) {
      bottom: 5%;
    }
    @media (max-width: 650px) {
      bottom: 10%;
    }
    @media (max-width: 450px) {
      bottom: 15%;
    }
  }
  @media (min-height: 1100px) {
    @media (max-width: 1000px) {
      bottom: 0;
    }
    @media (max-width: 900px) {
      bottom: 3%;
    }
    @media (max-width: 700px) {
      bottom: 10%;
    }
    @media (max-width: 450px) {
      bottom: 15%;
    }
  }
  @media (min-height: 1200px) {
    @media (max-width: 1000px) {
      bottom: -4%;
    }
    @media (max-width: 750px) {
      bottom: 4%;
    }
    @media (max-width: 550px) {
      bottom: 8%;
    }
    @media (max-width: 430px) {
      bottom: 12%;
    }
  }
  @media (min-height: 1400px) {
    @media (max-width: 1000px) {
      bottom: 0%;
    }
    @media (max-width: 750px) {
      bottom: 6%;
    }
    @media (max-width: 550px) {
      bottom: 9%;
    }
    @media (max-width: 430px) {
      bottom: 14%;
    }
  }
  .iAmText {
    display: flex;
    .iAm {
      rotate: -90deg;
      font-size: 4vw;
      margin: 3% -10% 0 0;
      @media (min-height: 1200px) {
        @media (max-width: 1000px) {
          font-size: 5vw;
        }
      }
    }
    .name {
      font-size: 6vw;
      font-weight: 700;
      @media (min-height: 1200px) {
        @media (max-width: 1000px) {
          font-size: 7.6vw;
        }
      }
    }
    .job {
      font-size: 2.9vw;
      color: $Purple;
      position: relative;
      margin: -4% 0 0 0;
      @media (min-height: 1200px) {
        @media (max-width: 1000px) {
          font-size: 3.7vw;
        }
      }
    }
  }
  .greenButton {
    color: white;
    margin: 3%;
    border: 0;
    padding: 2% 4%;
    border-radius: 0.5rem;
    background: #70e61c;
    z-index: 1;
    font-size: 1.5vw;
    transition: all 125ms ease-in-out;
    box-shadow: 4px 4px 4px rgb(0 0 0 / 25%);
    @media (max-width: 1000px) {
      @media (min-height: 800px) {
        padding: 5% 10%;
        font-size: 2vw;
      }
      @media (min-height: 1000px) {
        padding: 5% 10%;
        font-size: 3.5vw;
      }
      @media (min-height: 1200px) {
        padding: 5% 10%;
        font-size: 4.5vw;
      }
    }
    @media (max-height: 600px) {
      @media (max-width: 1000px) {
        padding: 0.5rem 1rem;
        font-size: 1.5rem;
      }
      @media (max-width: 500px) {
        font-size: 1.2rem;
      }
      @media (max-width: 375px) {
        font-size: 0.8rem;
      }
    }
    @media (min-height: 600px) {
      @media (max-width: 650px) {
        padding: 0.5rem 1rem;
        font-size: 2rem;
      }
      @media (max-width: 470px) {
        font-size: 1.5rem;
      }
      @media (max-width: 375px) {
        font-size: 1rem;
      }
    }
    @media (hover: hover) and (pointer: fine) {
      &:hover {
        padding: 1.5rem 2.5rem;
        background: $Purple;
        cursor: pointer;
      }
    }
  }
}

.bg {
  position: absolute;
  top: 30%;
  width: 100%;
  height: 100%;
  @media (max-width: 1000px) {
    width: 140%;
    top: 25%;
    @media (min-height: 200px) and (max-height: 600px) {
      top: 30%;
    }
    @media (min-height: 600px) and (max-height: 800px) {
      top: 13%;
    }
  }
  @media (max-width: 500px) and (max-height: 800px) {
    top: 15%;
    @media (max-height: 340px) {
      top: 25%;
    }
  }
  @media (min-height: 1500px) {
    @media (min-width: 1000px) {
      top: 21%;
    }
    @media (min-width: 1200px) {
      top: 25%;
    }
    @media (min-width: 1500px) {
      top: 30%;
    }
    @media (min-width: 2000px) {
      top: 35%;
    }
    @media (min-width: 2900px) {
      top: 40%;
    }
    @media (min-width: 3500px) {
      top: 45%;
    }
  }
  @media (max-height: 1500px) {
    @media (min-width: 1000px) {
      top: 24%;
    }
    @media (min-width: 1200px) {
      top: 27%;
    }
    @media (min-width: 1500px) {
      top: 31%;
    }
    @media (min-width: 2000px) {
      top: 38%;
    }
    @media (min-width: 2900px) {
      top: 45%;
    }
  }
  @media (max-height: 1300px) {
    @media (min-width: 1000px) {
      top: 26%;
    }
    @media (min-width: 1200px) {
      top: 29%;
    }
    @media (min-width: 1500px) {
      top: 34%;
    }
    @media (min-width: 2000px) {
      top: 42%;
    }
    @media (min-width: 2900px) {
      top: 45%;
    }
  }
  @media (max-height: 1200px) {
    @media (min-width: 1000px) {
      top: 27%;
    }
    @media (min-width: 1200px) {
      top: 31%;
    }
    @media (min-width: 1500px) {
      top: 36%;
    }
    @media (min-width: 2000px) {
      top: 45%;
    }
  }
}

.scrollDown {
  color: white;
  rotate: 90deg;
  font-size: 1.25rem;
  position: absolute;
  bottom: 8rem;
  right: 3rem;
  text-decoration: none;
  transition: all 125ms ease-in-out;
  img {
    rotate: -90deg;
    margin: 0 0 -2px 6px;
  }
  &:hover {
    scale: 1.1;
    cursor: pointer;
  }
  @media (max-width: 750px) {
    display: none;
  }
  @media (max-height: 450px) and (max-width: 850px) {
    right: -1.7rem;
  }
}

.linkList {
  position: absolute;
  bottom: 4rem;
  display: flex;
  align-items: center;
  gap: 1rem;
  margin: 0 0 0 -0.3rem;
  z-index: 1;
  cursor: pointer;
  @media (max-width: 1000px) {
    @media (max-height: 500px) {
      bottom: 2rem;
    }
  }
  a {
    text-decoration: none;
    color: white;
    font-size: 1.5rem;
    transition: all 125ms ease-in-out;
    display: flex;
    align-items: center;
    &:hover {
      scale: 1.1;
    }
    &.mobileHide {
      @media (max-width: 1200px) {
        display: none;
      }
    }
  }
  img {
    transition: all 125ms ease-in-out;
    &:hover {
      scale: 1.2;
    }
  }
  @media (max-width: 650px) {
    left: -5rem;
  }
  @media (max-height: 450px) and (max-width: 850px) {
    bottom: 2rem;
    left: -5rem;
  }
  @media (max-width: 390px) {
    left: -5rem;
  }
}

